# allo

./: .clangd  .gitignore  BUILD.md  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml
github/workflows/: build.yml
include/: allo.h
include/allo/: allo.h  allo_allocator.h  allo_bump.h  allo_config.h  allo_pool.h  allo_stack.h  allo_status.h  allocator.h  bump.h  config.h  pool.h  stack.h  status.h
include/allo/internal/: allo_common.h  allo_defines.h  allo_math.h  allocator.h  common.h  defines.h  math.h  math_common.h  status.h
src/: allo_bump.c  allo_pool.c  allo_stack.c  bump.c  pool.c  stack.c  status.c
tests/: CMakeLists.txt  test_allo_allocator.c  test_allo_bump.c  test_allo_common.c  test_allo_math.c  test_allo_pool.c  test_allo_stack.c  test_allocator.c  test_bump.c  test_common.c  test_interface.c  test_math.c  test_pool.c  test_stack.c  test_utils.c  test_utils.h
tests/allo_test/: allo_test.c  allo_test.h  allo_test_assert.c  allo_test_assert.h  allo_test_io.c  allo_test_io.h  allo_test_mem.c  allo_test_mem.h  assert.c  io.c  mem.c  test_utils.c  test_utils.h
